# icub-main

src/libraries/icubmod/bcbBattery/: bcbBattery.cpp  bcbBattery.h
src/tools/actionsPlayer/: CMakeLists.txt  action.cpp  action.h  broadcasting_thread.cpp  broadcasting_thread.h  configuration.ini  main.cpp  robotDriver.cpp  trajectory2.txt  working_thread.cpp  working_thread.h
